--- a/style.css
+++ b/style.css
@@ -2,14 +2,13 @@
 body {
     /* background-image: url('images/mag1.png'); */
 
-    background-image: url('mag1.png');
+    background-image: url('images/mag1.png');
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
     background-color: #464646; /* Kolor tła na wypadek, gdy obrazek nie załaduje */
 }
-
   font-family: Arial, sans-serif;
   background-color: #222;
   color: white;
