--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
 }
 .card1 {
-  background-color: #5e5c5c;
+  background-color: #1f3002;
   opacity: 0.9;
   padding: 20px;
   border-radius: 10px;
