--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, sans-serif;
-  background-image: url("images/mag1.png");
+  background-image: url("images/mag1.webp");
   background-color: #222;
   color: white;
   display: flex;
